# duckdb

./: CMakeLists.txt
tools/pythonpkg/: CMakeLists.txt  setup.py
tools/pythonpkg/src/: pyconnection.cpp
tools/pythonpkg/src/include/duckdb_python/numpy/: numpy_type.hpp
tools/pythonpkg/src/numpy/: numpy_scan.cpp  type.cpp
tools/pythonpkg/tests/fast/pandas/: test_pandas_string.py
